# Cipher-Crackers

./: .editorconfig  .gitignore  CMakeLists.txt  CipherCrackers  LICENSE  README.md
C#/: Cipher.sln  Performance.psess  _BuildAndTest.bat
C#/Cipher/: Cipher.csproj  MathsUtilities.cs
C#/Cipher.Experimental/: Cipher.Experimental.csproj  packages.config
C#/Cipher.Experimental/Ciphers/: Hill.cs  HillBrute.cs  HillCribbed.cs
C#/Cipher.Experimental/Properties/: AssemblyInfo.cs
C#/Cipher.Experimental/Text/: NgramArray.cs  QuadgramScoredNGramArray.cs
C#/CipherPrompt/: CipherPrompt.csproj  Program.cs  StdInWrapper.cs  TestingProg.cs
C#/CipherWPF/: App.xaml.cs  CipherWPF.csproj  GlobalResources.xaml  IDecode.cs  MainWindow.xaml  MainWindow.xaml.cs  StringLengthToBooleanConverter.cs  packages.config
C#/Testing/: AssertUtils.cs  DataTest.cs  Testing.csproj
Examples/: Caeser.txt  Substitution.txt  Vigenere.txt
src/: Cipher.sln  _BuildAndTest.bat  cipher.hpp  main.cpp
src/Cipher/: Cipher.csproj
src/CipherPrompt/: CipherPrompt.csproj  Program.cs
src/CipherWPF/: App.xaml  App.xaml.cs  CipherWPF.csproj  Converters.cs  GlobalResources.xaml  IDecode.cs  MainWindow.xaml  MainWindow.xaml.cs  StringLengthToBooleanConverter.cs  packages.config
src/Testing/: Testing.csproj  packages.config
src/ciphers/: caesar.hpp  result.hpp
src/solitaire/: .gitignore  scoreText.c  scoreText.h  solitaire.c  solitaire.h
src/statistics/: bigrams.hpp  monograms.hpp  scorer.hpp
src/text/: utilities.cpp  utilities.hpp
tools/stats/: .gitignore  convert.py
(+188 files in other folders)
